--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -16,15 +16,30 @@
     </div>
     
         <ul>
-        <li><a href="#" class="active">Ana Sayfa</a></li>
-        <li><a href="#">Kiyafetler</a></li>
+        <li><a href="index.html" class="active">Ana Sayfa</a></li>
+        <li><a href="cocuk.html">Çocuk</a></li>
         <li><a href="#">Erkek</a></li>
         <li><a href="#">Kadin</a></li>
-        <li><a href="#">Hakkimizda</a></li>  
+        <li><a href="hakkimizda.html">Hakkimizda</a></li>  
     </ul>
     </div>
-    <div class="resim1">
-        <a href=""><img src="T5987AZ_22WN_BK81_01_02.JPG" alt="">
-        <h1> Kadın</h1></a>
+    <p>
+    <div class="yazilar">
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;KADIN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ERKEK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        ÇOCUK(K)&nbsp;&nbsp;&nbsp;&nbsp;ÇOCUK(E)
+    </h1>
+    </div>
+    </p>
+    <br><br><br><br>
+    <p>
+    <div class="resimler">
+        <a href="#"><img src="Kadin.jpg" alt=""></a>
+        <a href="#"><img src="Erkek.jpeg" alt=""></a>
+        <a href="cocuk.html"><img src="kiz cocuğu.jpg" alt=""></a>
+        <a href="cocuk.html"><img src="erkek cocuğu.jpg" alt=""></a>
+    </div>
+    </p>
+    
 </body>
 </html>
